# learn-hatch

./: .gitignore  LICENSE  SIR_model_script.py  pyproject.toml
src/adamtaranto_epi_models/: SIR.py  __init__.py  utils.py
